syntax = "proto3"; 
package active_sessions;

message UserData { 
    string username = 1;
    string email = 2; 
    string location = 3; 
} 

message UserDataResponse{
    string session_token = 1;
}

service ActiveSessions {
    rpc AddUser (UserData) returns (UserDataResponse); 
}

